--- a/index.html
+++ b/index.html
@@ -17,20 +17,11 @@
       <button type="button" class="js-btn-find btn-find">Найти</button>
     </div>
     <div class="notfound">
-      <p class="notfound_text">Фильмы не найдены</p>
+      <p class="notfound-text">Фильмы не найдены</p>
     </div>
   
     <ul class="js-list-movie list-movies">
-      <!-- <li class="movie__card" id=${element.imdbID}>
-        <a class="movie__card_link" href="">
-          <img class="movie-image" src=${element.Poster} alt=${element.Title}>
-          <div class="movie__text">
-            <p class="movie-title">${element.Title}</p>
-            <p class="movie-year">${element.Year}</p>
-            <p class="movie-type">${element.Type}</p>
-          </div>
-        </a>
-      </li>  -->
+ 
     </ul>
   </div>
  
@@ -38,3 +29,20 @@
   <script src="index.js"></script>
 </body>
 </html>
+
+<!-- 
+"Search": [
+  {
+      "Title": "Batman Begins",
+      "Year": "2005",
+      "imdbID": "tt0372784",
+      "Type": "movie",
+      "Poster": "https://m.media-amazon.com/images/M/MV5BOTY4YjI2N2MtYmFlMC00ZjcyLTg3YjEtMDQyM2ZjYzQ5YWFkXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg"
+  },
+  {
+      "Title": "The Batman",
+      "Year": "2022",
+      "imdbID": "tt1877830",
+      "Type": "movie",
+      "Poster": "https://m.media-amazon.com/images/M/MV5BM2MyNTAwZGEtNTAxNC00ODVjLTgzZjUtYmU0YjAzNmQyZDEwXkEyXkFqcGdeQXVyNDc2NTg3NzA@._V1_SX300.jpg"
+  } -->
