--- a/movie.html
+++ b/movie.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -13,61 +14,7 @@
 <body>
   <div class="container">
     <a class="return-link" href="/index.html"><- Назад к поиску</a>
-    <div class="js-movie__wrapper movie__wrapper">
-     <!-- <div class="movie__wrapper-details">
-      <img class="movie__image" src="https://m.media-amazon.com/images/M/MV5BYTViNzMxZjEtZGEwNy00MDNiLWIzNGQtZDY2MjQ1OWViZjFmXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_SX300.jpg" alt="">
-      <div class="movie__input">
-        <h1 class="movie__name">Batman Begins</h1>
-        <div class="movie__info">
-          <p class="label">Год:
-            <span class="movie__info-text">  2005 </span>
-          </p>
-        </div>
-        <div class="movie__info">
-          <p class="label">Рейтинг:
-            <span class="movie__info-text">   PG-13 </span>
-          </p>
-        </div>
-        <div class="movie__info">
-          <p class="label">Дата выхода:
-            <span class="movie__info-text">   15 june 2005 </span>
-          </p>
-        </div>
-        <div class="movie__info">
-          <p class="label">Продолжительность:
-            <span class="movie__info-text">  140 минут </span>
-          </p>
-        </div>
-        <div class="movie__info">
-          <p class="label">Жанр:
-            <span class="movie__info-text">   Action, Crime, Drama </span>
-          </p>
-        </div>
-        <div class="movie__info">
-          <p class="label">Режиссер:
-            <span class="movie__info-text">   Christopher Nolan </span>
-          </p>
-        </div>
-        <div class="movie__info">
-          <p class="label">Сценарий:
-            <span class="movie__info-text">   Bob Kane, David S. Goyer, Christopher Nolan </span>
-          </p>
-        </div>
-        <div class="movie__info">
-          <p class="label">Актеры:
-            <span class="movie__info-text">   Christian Bale, Michael Caine, Ken Watanabe </span>
-          </p>
-        </div>
-      </div>
-    </div>
-
-     </div>
-
-     
-    <div class="movie-content">
-      After witnessing his parents' death, Bruce learns the art of fighting to confront injustice. When he returns to Gotham as Batman, he must stop a secret society that intends to destroy the city.
-    </div>
-   </div> -->
+    <div class="js-movie__wrapper movie__wrapper"></div>
 
 
 <script src="movie.js"></script>
