--- a/movie.html
+++ b/movie.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <a class="return-link" href="/index.html"><- Назад к поиску</a>
+    <a class="return-link" href="./index.html"><- Назад к поиску</a>
     <div class="js-movie__wrapper movie__wrapper"></div>
 
 
